<resources>
    <string name="app_name">Nmedia</string>
    <string name="greetings">Nmedia!</string>
    <string name="avatar_description">Avatar</string>
    <string name="post_header" translatable="false">Нетология. Университет интернет-профессий</string>
    <string name="post_date" translatable="false">5 мая в 15:41</string>
    <string name="menu_button">Menu</string>
    <string name="share_button">Share</string>
    <string name="like_button">Like</string>
    <string name="views_button">Views</string>
    <string name="post_message" translatable="false">Пусто</string>
    <string name="remove">Remove</string>
    <string name="enter_text">Enter text</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="preview">Preview</string>
    <string name="add_post">Add post</string>
    <string name="play">Play</string>
    <string name="openPost">Open post</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_post">New post from %1$s</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>