<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/big_common_spacing">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="@dimen/avatar_view_size"
        android:layout_height="@dimen/avatar_view_size"
        android:layout_marginStart="@dimen/big_common_spacing"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology" />

    <TextView
        android:id="@+id/postHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/post_header"
        app:layout_constraintBottom_toTopOf="@id/postDate"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toTopOf="@id/avatarImageView"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/post_date"
        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
        app:layout_constraintEnd_toEndOf="@id/postHeader"
        app:layout_constraintStart_toStartOf="@id/postHeader"
        app:layout_constraintTop_toBottomOf="@id/postHeader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuButton"
        style="@style/Widget.AppTheme.menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/menu_button"
        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatarImageView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottomPostHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/big_common_spacing"
        app:constraint_referenced_ids="avatarImageView, postDate, menuButton"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_common_spacing"
        android:layout_marginEnd="@dimen/big_common_spacing"
        android:text="@string/post_message"
        app:layout_constraintTop_toTopOf="@id/barrierBottomPostHeader"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottomMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="message"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/Widget.AppTheme.likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:checkable="true"
        android:contentDescription="@string/like_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="@style/Widget.AppTheme.shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:checkable="true"
        android:contentDescription="@string/share_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/Widget.AppTheme.views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:checkable="false"
        android:contentDescription="@string/views_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        tools:text="8" />

</androidx.constraintlayout.widget.ConstraintLayout>